FullQa New/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Change_Agent__c</fullName>
        <description>Updated 7/12 - Change field label to &quot;Pain&quot;
Does the customer have any one of these changes happening?</description>
        <inlineHelpText>Does the customer have any one of these changes happening?</inlineHelpText>
        <label>Pain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Change (i.e. Acquisition)</fullName>
                </value>
                <value>
                    <fullName>Currently Outsourcing to a CPA Firm</fullName>
                </value>
                <value>
                    <fullName>Expanding Nexus</fullName>
                </value>
                <value>
                    <fullName>Expanding to Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Fast Growing</fullName>
                </value>
                <value>
                    <fullName>Manually/Time Consuming Calculating Tax</fullName>
                </value>
                <value>
                    <fullName>Needs to Evaluate Current Process</fullName>
                </value>
                <value>
                    <fullName>New/Changed ERP system</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>New Legislation</fullName>
                </value>
                <value>
                    <fullName>New Products/Services</fullName>
                </value>
                <value>
                    <fullName>Not Compliant</fullName>
                </value>
                <value>
                    <fullName>Recently Audited</fullName>
                </value>
                <value>
                    <fullName>Staffing Change</fullName>
                </value>
                <value>
                    <fullName>State SST Change</fullName>
                </value>
                <value>
                    <fullName>Using Competitor/Unhappy with Current Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangedChannelPartnerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(this field will be used to capture email if it was changed before 6 months)https://jira.avalara.com/browse/IBST-7371</description>
        <inlineHelpText>Partner on latest form submission, unable to overwrite, &lt;6 mo. since prior partner added.</inlineHelpText>
        <label>Suggested Channel Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Billing_State__c</fullName>
        <description>Pulls the Channel Partners Billing state which is used for Routing.</description>
        <formula>PartnerName__r.BillingState</formula>
        <inlineHelpText>Pulls the Channel Partners Billing state which is used for Routing.</inlineHelpText>
        <label>Channel Partner Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Category__c</fullName>
        <description>Pulls the value of the Partner Category from the associate Channel Partner on the lead.</description>
        <formula>TEXT(PartnerName__r.Partner_Category__c)</formula>
        <inlineHelpText>Pulls the value of the Partner Category from the associate Channel Partner on the lead.</inlineHelpText>
        <label>Channel Partner Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Name_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Name (Mapping)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Channel Partner Name (Mapping))</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Name_Update_6__c</fullName>
        <defaultValue>false</defaultValue>
        <description>https://jira.avalara.com/browse/IBST-7371</description>
        <label>Channel Partner Name Update &lt;6</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Sales_Rep_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Map to Contact</description>
        <label>Channel Partner Sales Rep (Mapping)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Channel Partner Sales Rep (Mapping))</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Avalara Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientTimeframe__c</fullName>
        <description>The amount of time before a Patner client(s) interested in implementing a Sales Tax solution.</description>
        <inlineHelpText>Please select the amount of time in which a Patner&apos;s client(s) is interested in implementing a Sales Tax solution.</inlineHelpText>
        <label>(Deprecated) Client Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>Within 1 month</fullName>
                </value>
                <value>
                    <fullName>Within 3 months</fullName>
                </value>
                <value>
                    <fullName>Longer than 3 months</fullName>
                </value>
                <value>
                    <fullName>No Client Prospects at this time</fullName>
                </value>
                <value>
                    <fullName>Currently using Avalara solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_2__c</fullName>
        <description>Copy of Compelling Event Field: Does the customer have any one of these changes happening.
Integrated: Yes, populated by workflow rule and mapped from Lead to contact on conversion.
Marketing: Saara J.</description>
        <label>Compelling Event (2)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Change (i.e. Acquisition)</fullName>
                </value>
                <value>
                    <fullName>Expanding Nexus</fullName>
                </value>
                <value>
                    <fullName>Expanding to Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Fast Growing</fullName>
                </value>
                <value>
                    <fullName>High Growth - Mattermark</fullName>
                </value>
                <value>
                    <fullName>New/Changed ERP system</fullName>
                </value>
                <value>
                    <fullName>New Legislation</fullName>
                </value>
                <value>
                    <fullName>New Products/Services</fullName>
                </value>
                <value>
                    <fullName>Recently Audited</fullName>
                </value>
                <value>
                    <fullName>Staffing Change</fullName>
                </value>
                <value>
                    <fullName>State SST Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConnectorIDLookup__c</fullName>
        <formula>Connector__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConnectorIDLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectorManagedBy__c</fullName>
        <description>The party responsible for managing an AvaTax Connector</description>
        <inlineHelpText>The party responsible for managing an AvaTax Connector</inlineHelpText>
        <label>(Deprecated) Connector Managed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Software Publisher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector_BD_Sales_Owner__c</fullName>
        <description>Pulls the BD Sales owner of the related connector onto the lead record. This enables the routing of the Launch Connectors via ChiliPiper.
Owner: Kim Gordon</description>
        <formula>Connector__r.Early_Adopter_Sales_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector BD Sales Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector (Mapping)</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Leads (Connector (Mapping))</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connector_Name_Text__c</fullName>
        <description>Creates a text field for the connector name from the connector Lookup - necessary for routing via ChiliPiper</description>
        <formula>Connector__r.Name</formula>
        <inlineHelpText>Creates a text field for the connector name from the connector Lookup - necessary for routing via ChiliPiper</inlineHelpText>
        <label>Connector Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Partner_Team_Grouping__c</fullName>
        <description>Field used for routing appointment Via ChiliPiper using the Team assignment directly from the related connector on the lead.</description>
        <formula>Text(Connector__r.Partner_Team_Grouping__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Refers to the team assignment found on the connector record.</inlineHelpText>
        <label>Connector Partner Team Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Vibrancy__c</fullName>
        <description>Used for ChiliPiper Routing</description>
        <formula>TEXT(Connector__r.Vibrancy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Vibrancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Inbound lead connector
Integrated: No
Change: Level 0
Custodian: AvaTax VP Marketing Demand Gen</description>
        <inlineHelpText>The additional primary connector associated with this lead</inlineHelpText>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consecutive_Night_Stays__c</fullName>
        <label>Consecutive Night Stays</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Leads (Contact Connector)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Me__c</fullName>
        <inlineHelpText>This field is used on .com and other user-entry forms where the timeframe question isn&apos;t as relevent.  Any lead with a Contact Me of Yes will be automatically converted into a new opportunity.</inlineHelpText>
        <label>High Priority</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversica_Outreach_Title__c</fullName>
        <description>Used for conversica automation in email templates to communicate which type of interaction the lead had. Will be determined by conversica depending on the type of campaign the lead was associated to. 
Ower: marketing opps / Marguerite Yeo</description>
        <label>Conversica Outreach Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Page_TEXT__c</fullName>
        <description>Purpose: Text conversion of URL for filtering in DE.
Integration: Yes, used in filter for DE.
Business Value: 1
Custodian: Marketing</description>
        <formula>Conversion_Page__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Page (TEXT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Page__c</fullName>
        <description>Web page that triggered form conversion</description>
        <inlineHelpText>Web page that triggered form conversion</inlineHelpText>
        <label>Conversion Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CopyEmail__c</fullName>
        <label>CopyEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CopyName__c</fullName>
        <label>CopyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateTrustFileAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Track the button selection event associated with CertCapture Provisioning
Integrated: No
Change: Level 0
Custodian: AvaTax VP Marketing Demand Gen</description>
        <inlineHelpText>Track the button selection event associated with CertCapture Provisioning</inlineHelpText>
        <label>Create TrustFile Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentUserEmail__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserID__c</fullName>
        <formula>CASESAFEID( $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Duration__c</fullName>
        <description>Use to determine how long a lead has been in a particular status. 
Used in Workflow for leads in Working over 60 days.</description>
        <formula>TODAY()  -  DATEVALUE( Status_Change_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to include or exclude specific leads from the assignment rules or from specific distributors..
integrated: yes, Distributors depend on this rule
Sales/Marketing: Katie Pelly</description>
        <label>Custom Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_ERP_Type__c</fullName>
        <description>Pick the kind of ERP system the customer uses.</description>
        <label>(Deprecated) Customer ERP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>aACE</fullName>
                </value>
                <value>
                    <fullName>abas USA</fullName>
                </value>
                <value>
                    <fullName>AccountMate</fullName>
                </value>
                <value>
                    <fullName>ACCTivate!/Alterity</fullName>
                </value>
                <value>
                    <fullName>ACGI</fullName>
                </value>
                <value>
                    <fullName>Acumatica</fullName>
                </value>
                <value>
                    <fullName>Alterity</fullName>
                </value>
                <value>
                    <fullName>Aria Systems</fullName>
                </value>
                <value>
                    <fullName>BizAutomation</fullName>
                </value>
                <value>
                    <fullName>Blackbaud</fullName>
                </value>
                <value>
                    <fullName>BSI</fullName>
                </value>
                <value>
                    <fullName>BV Software</fullName>
                </value>
                <value>
                    <fullName>CMS i5</fullName>
                </value>
                <value>
                    <fullName>CoLinear Systems</fullName>
                </value>
                <value>
                    <fullName>Connectwise</fullName>
                </value>
                <value>
                    <fullName>Corrigo</fullName>
                </value>
                <value>
                    <fullName>Cyrious</fullName>
                </value>
                <value>
                    <fullName>Datatel</fullName>
                </value>
                <value>
                    <fullName>DMSi Agility</fullName>
                </value>
                <value>
                    <fullName>eBay ProStores</fullName>
                </value>
                <value>
                    <fullName>EBS Next</fullName>
                </value>
                <value>
                    <fullName>ePIC one</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Epicor 9</fullName>
                </value>
                <value>
                    <fullName>Epicor Avante</fullName>
                </value>
                <value>
                    <fullName>Epicor CRS</fullName>
                </value>
                <value>
                    <fullName>Epicor Eclipse</fullName>
                </value>
                <value>
                    <fullName>Epicor Enterprise</fullName>
                </value>
                <value>
                    <fullName>Epicor Manage2000</fullName>
                </value>
                <value>
                    <fullName>Epicor ManFact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE_do_not_distribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to prevent opportunities from Routing from Regional managers to their team members. 
Maps from a converted lead to the opportunity record created.</description>
        <label>DE Do Not Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>Unique id for a single business entity (D&amp;B)</description>
        <inlineHelpText>Unique id for a single business entity (D&amp;B)</inlineHelpText>
        <label>DUNS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_com_Industry__c</fullName>
        <label>Data.com Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMMUNICATIONS</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DemandBaseAccuracy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the the data populated by the DemandBase integration appears to be accurate.</description>
        <inlineHelpText>Indicates whether or not the the data populated by the DemandBase integration appears to be accurate.</inlineHelpText>
        <label>DemandBase Accuracy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DemandBaseID__c</fullName>
        <description>The DemandBase ID associated with an organization.</description>
        <inlineHelpText>The DemandBase ID associated with an organization.</inlineHelpText>
        <label>DemandBase ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified_Date__c</fullName>
        <label>Disqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>If the Lead Status is set to Disqualified, this field captures the Reason that the Lead is Disqualified.</description>
        <inlineHelpText>If the Lead Status is set to Disqualified, this field captures the Reason that the Lead is Disqualified.</inlineHelpText>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Disqualified_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualified_Reasons__c</fullName>
        <description>If the Lead Status is set to Disqualified, this field captures the Reason(s) that the Lead is Disqualified.</description>
        <inlineHelpText>If the Lead Status is set to Disqualified, this field captures the Reason(s) that the Lead is Disqualified.</inlineHelpText>
        <label>(DEPRECATED) Disqualified Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DO NOT CALL / DO NOT EMAIL</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Personal Use</fullName>
                </value>
                <value>
                    <fullName>Bad / fake information</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_Product_Group_etc__c</fullName>
        <label>Division/Product Group etc.</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-1206</description>
        <formula>CASE( SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL), 
&apos;yahoo.com&apos;, NULL, &apos;gmail.com&apos;, NULL, &apos;hotmail.com&apos;, NULL, &apos;aol.com&apos;, NULL, &apos;outlook.com&apos;, NULL, 
SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL) )</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Campaign_Name__c</fullName>
        <label>Dynamic Campaign Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Customer_Type__c</fullName>
        <description>This is for VATLive and identifies the type of customer on form completion so sales can identify prospects.
Owner: Jason Moore/marketing opps.</description>
        <label>EMEA Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EMEA_Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEA_Lead_no_Region__c</fullName>
        <description>Used for Lead Routing - Identifies EMEA leads that do not fall into the routable countries.
EMEA Sales - Katie P. for Distribution engine.</description>
        <formula>AND( Country  &lt;&gt; &quot;FR&quot;,Country  &lt;&gt; &quot;France&quot;,Country  &lt;&gt; &quot;ES&quot;,Country  &lt;&gt; &quot;Spain&quot;,Country  &lt;&gt; &quot;IT&quot;,Country  &lt;&gt; &quot;Italy&quot;,Country  &lt;&gt; &quot;CH&quot;,Country  &lt;&gt; &quot;Switzerland&quot;,Country  &lt;&gt; &quot;PT&quot;,Country  &lt;&gt; &quot;Portugal&quot;,Country  &lt;&gt; &quot;GR&quot;,Country  &lt;&gt; &quot;Greece&quot;,Country  &lt;&gt; &quot;UK&quot;,Country  &lt;&gt; &quot;United Kingdom&quot;,Country  &lt;&gt; &quot;IE&quot;,Country  &lt;&gt; &quot;Ireland&quot;,Country  &lt;&gt; &quot;SE&quot;,Country  &lt;&gt; &quot;Sweden&quot;,Country  &lt;&gt; &quot;DK&quot;,Country  &lt;&gt; &quot;Denmark&quot;,Country  &lt;&gt; &quot;NO&quot;,Country  &lt;&gt; &quot;Norway&quot;,Country  &lt;&gt; &quot;LU&quot;,Country  &lt;&gt; &quot;Luxemburg&quot;,Country  &lt;&gt; &quot;BE&quot;,Country  &lt;&gt; &quot;Belgium&quot;,Country  &lt;&gt; &quot;NL&quot;,Country  &lt;&gt; &quot;Netherlands&quot;,Country  &lt;&gt; &quot;DE&quot;,Country  &lt;&gt; &quot;Germany&quot;,Country  &lt;&gt; &quot;AT&quot;,Country  &lt;&gt; &quot;Austria&quot;, Country  &lt;&gt; &quot;GB&quot;,Country  &lt;&gt; &quot;Great Britain&quot;,Country  &lt;&gt; &quot;FI&quot;,Country  &lt;&gt; &quot;Finland&quot;,Country  &lt;&gt; &quot;IS&quot;,Country  &lt;&gt; &quot;Iceland&quot;,Country  &lt;&gt; &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA Lead - No Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_Primary_Product__c</fullName>
        <description>https://avalara.atlassian.net/browse/SFCOM-7843</description>
        <label>EMEA Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EMEA_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_1_Count__c</fullName>
        <description>This ERP section is for the number of ERP systems a Partner has in their installed base. ERP 1 Type refers to the most prevalent, so the ERP 1 Count is the total number of ERP 1 installations for this particular office of this particular Partner.</description>
        <label>(Deprecated) ERP  1 Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>